--- a/index.html
+++ b/index.html
@@ -1,92 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Rupesh Resume</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            padding: 20px;
-            background-color: white;
-        }
-        .container {
-            max-width: 800px;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        ul {
-            padding-left: 20px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rupesh Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #fff;
+      color: #000;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 28px;
+      margin: 0;
+    }
+    .contact {
+      font-size: 16px;
+      margin-top: 5px;
+    }
+    .section {
+      margin-top: 25px;
+    }
+    h2 {
+      font-size: 20px;
+      color: #222;
+      border-bottom: 1px solid #000;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    table, th, td {
+      border: 1px solid #000;
+    }
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
+    a {
+      color: #000;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>K. Rupesh Hari Sai</h1>
-        <p>📞 +91 8317542898 | 📧 kokkurupeshharisai@gmail.com | <a href="https://linkedin.com/in/rupesh-kokku-776256354">LinkedIn</a></p>
-        
-        <div class="section">
-            <h2>Career Objective</h2>
-            <p>To secure a role where I can apply my skills, adapt to challenges, and contribute effectively for organizational growth.</p>
-        </div>
 
-        <div class="section">
-            <h2>Education</h2>
-            <ul>
-                <li><strong>PRASAD.V.POTLURI SIDDHARTHA INSTITUTE OF TECHNOLOGY</strong> (2022-2026) - B.Tech in Electronics and Communication Engineering (CGPA: 7.5)</li>
-                <li><strong>SRI SARADA JUNIOR COLLEGE</strong> (2020-2022) - Board of Intermediate Education (Percentage: 69%)</li>
-                <li><strong>SLATE THE SCHOOL</strong> (2019-2020) - Board of Secondary Education (CGPA: 9.7)</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Internship</h2>
-            <p><strong>Thermal Power Generation</strong></p>
-            <ul>
-                <li>Gained hands-on experience in thermal power plant operations and maintenance.</li>
-                <li>Studied boiler operations, turbine functioning, and coal handling techniques.</li>
-                <li>Analyzed energy production cycles and efficiency improvement techniques.</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Projects</h2>
-            <p><strong>Community Service Project</strong></p>
-            <p>Conducted a survey in Yanamalakuduru to assess health, education, and employment issues and explored possible solutions.</p>
-            <p><strong>IoT Home Automation</strong></p>
-            <p>Developed an Arduino-based system for automating lights and fans based on human presence.</p>
-        </div>
-
-        <div class="section">
-            <h2>Skill Set</h2>
-            <p><strong>Programming Languages:</strong> C, Python, Java</p>
-            <p><strong>Core Subjects:</strong> BEEE, VLSI Design</p>
-        </div>
-
-        <div class="section">
-            <h2>Certifications</h2>
-            <ul>
-                <li>PCB Design - APSSDC</li>
-                <li>Java Foundation Certification - Infosys Spring Board</li>
-                <li>Internet of Things Foundation - Infosys Spring Board</li>
-                <li>NPTEL - Problem Solving through Programming in C</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Extra-Curricular Activities</h2>
-            <ul>
-                <li>Coordinated Department Quiz.</li>
-                <li>Participated in poster presentations and debates.</li>
-            </ul>
-        </div>
+  <div class="header">
+    <h1>K. Rupesh Hari Sai</h1>
+    <div class="contact">
+      📞 +91 8317542898 | 📧 kokkurupeshharisai@gmail.com<br>
+      🔗 <a href="https://linkedin.com/in/rupesh-kokku-776256354" target="_blank">linkedin.com/in/rupesh-kokku-776256354</a>
     </div>
+  </div>
+
+  <div class="section">
+    <h2>Career Objective</h2>
+    <p>To secure a role where I can apply my skills, adapt to challenges, and contribute effectively for organizational growth.</p>
+  </div>
+
+  <div class="section">
+    <h2>Education</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Institution</th>
+          <th>Course</th>
+          <th>Board/University</th>
+          <th>Year</th>
+          <th>CGPA/Percentage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Prasad V. Potluri Siddhartha Institute of Technology</td>
+          <td>B.Tech in Electronics and Communication Engineering</td>
+          <td>JNTUK</td>
+          <td>2022-2026</td>
+          <td>CGPA: 7.5</td>
+        </tr>
+        <tr>
+          <td>Sri Sarada Junior College</td>
+          <td>Intermediate</td>
+          <td>Board of Intermediate Education</td>
+          <td>2020-2022</td>
+          <td>Percentage: 69%</td>
+        </tr>
+        <tr>
+          <td>Slate The School</td>
+          <td>SSC</td>
+          <td>Board of Secondary Education</td>
+          <td>2019-2020</td>
+          <td>CGPA: 9.7</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div class="section">
+    <h2>Internship</h2>
+    <p><strong>Thermal Power Generation</strong><br>
+    Gained hands-on experience in thermal power plant operations and maintenance.<br>
+    Studied boiler operations, turbine functioning and coal handling techniques.<br>
+    Analyzed energy production cycles and efficiency improvement techniques.</p>
+  </div>
+
+  <div class="section">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Community Service Project:</strong> Conducted a survey in Yanamalakuduru to assess health, education, and employment issues. Identified problems and explored possible solutions.</li>
+      <li><strong>IoT Home Automation:</strong> Developed using Arduino to automatically turn on lights and fans when a person enters.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Skill Set</h2>
+    <p><strong>Programming Languages:</strong> C, Python, Java</p>
+    <p><strong>Core Subjects:</strong> BEEE, VLSI Design</p>
+  </div>
+
+  <div class="section">
+    <h2>Certifications</h2>
+    <ul>
+      <li>PCB Design, APSSDC</li>
+      <li>Java Foundation Certification, Infosys Spring Board</li>
+      <li>Internet of Things Foundation, Infosys Spring Board</li>
+      <li>NPTEL - Problem Solving through Programming in C</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Extra-Curricular Activities</h2>
+    <ul>
+      <li>Participated as coordinator in Department Quiz</li>
+      <li>Participated in poster presentations and debates</li>
+    </ul>
+  </div>
+
 </body>
 </html>
